--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: ./Devops-intern-Elavatelabs-task-1
 
     - name: Run tests
       run: npm test || echo "No tests found"
