--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,12 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: ./nodejs-ci-cd-demo
+
+    - name: Start server
+      run: npm start
+      working-directory: ./nodejs-ci-cd-demo
+
 
     - name: Run tests
       run: npm test || echo "No tests found"
